fixed scrollbar

--- a/client/src/styles/Group.css
+++ b/client/src/styles/Group.css
@@ -2,6 +2,8 @@
 .MessageList {
   overflow-y: auto;
   padding: 4px;
+  flex-direction: column-reverse
+
 }
 
 /* Message */
